--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudformation-video-thumbnail",
-  "version": "0.0.2",
+  "version": "0.0.3-pre",
   "description": "Generates a thumbnail for videos uploaded to a S3 bucket.",
   "main": "index.js",
   "repository": "https://github.com/sammarks/cloudformation-video-thumbnail",
